# text-super-resolution-network

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  utils.py
models/recognizer/: attention_recognition_head.py
notebooks/: eda.ipynb  textzoom.ipynb  tsrn.ipynb
utils/: checkpoint.py  metrics.py  utils.py
