[project]
name = "icpr26-lrlpr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.19"
dependencies = [
    "editdistance>=0.8.1",
    "jupyterlab",
    "lmdb>=1.7.5",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch",
    "torchaudio",
    "torchvision",
    "tqdm",
]
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }